--- a/public/index.html
+++ b/public/index.html
@@ -29,5 +29,6 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <a id="gsc" href="#" download="winstall.bat"/>
   </body>
 </html>
