Fix search results UX

--- a/public/index.html
+++ b/public/index.html
@@ -13,17 +13,17 @@
     
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://winstall.now.sh/">
+    <meta property="og:url" content="https://winstall.app/">
     <meta property="og:title" content="winstall">
     <meta property="og:description" content="Bulk install Windows apps quickly with Windows Package Manager.">
-    <meta property="og:image" content="%PUBLIC_URL%/cover.png">
+    <meta property="og:image" content="https://winstall.app/cover.png">
     
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:url" content="https://winstall.now.sh/">
+    <meta property="twitter:url" content="https://winstall.app/">
     <meta property="twitter:title" content="winstall">
     <meta property="twitter:description" content="Bulk install Windows apps quickly with Windows Package Manager.">
-    <meta property="twitter:image" content="%PUBLIC_URL%/cover.png">
+    <meta property="twitter:image" content="https://winstall.app/cover.png">
 
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
