fix meta preview

--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     
     <!-- Primary Meta Tags -->
     <title>winstall</title>
-    <meta name="title" content="winstall">
+    <meta name="title" content="winstall - the Windows Package Manager GUI">
     <meta name="description" content="Bulk install Windows apps quickly with Windows Package Manager.">
     
     <!-- Open Graph / Facebook -->
