--- a/public/index.html
+++ b/public/index.html
@@ -36,4 +36,13 @@
     <div id="root"></div>
     <a id="gsc" href="#" download="winstall.bat"/>
   </body>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-48569869-4"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'UA-48569869-4');
+  </script>
 </html>
