--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#9b2eff" />
     
     <!-- Primary Meta Tags -->
-    <title>winstall</title>
+    <title>winstall - GUI for Windows Package Manager</title>
     <meta name="title" content="winstall - the Windows Package Manager GUI">
     <meta name="description" content="Bulk install Windows apps quickly with Windows Package Manager.">
     
